Fix small dark mode issue

--- a/src/css/dark_theme/general.less
+++ b/src/css/dark_theme/general.less
@@ -119,6 +119,10 @@
   background-color: var(--blue-70);
 }
 
+.board_fake_input {
+  background-color: #000;
+}
+
 .male {
   color: var(--blue-80);
 }
